export class CartaoCredito {

  id!: number;
  numeroCartao!: string;
  nomeImpressoCartao!: string;
  cpfTitular!: string;
  bandeiraCartao!: string;
  dataValidade!: Date;
  codigoSeguranca!: string
}
