export class Developer {

  id!: number;
  nome!: string;
  anoFundacao!: Date;
}
