export class Telefone {

  id!: number;
  codigoArea!: string;
  numero!: number;
}
