export enum TopicoPrincipal {

  EVENTO,
  LANCAMENTO,
  ANALISE_JOGO,
  ATUALIZACAO
}
