@startuml Games-eCommerce

    abstract class Produto {

        - id: Long
        - nome: String
        - descricao: String
        - preco: Double
    }

    class Game {

        - anoLacamento: Date
    }

    class Genero {

        - id: Long
        - nome: String
    }

    enum Classificacao {

        + FIRS_PARTY
        + SECOND_PARTY
        + THIRD_PARTY
        + INDIE
    }

    class Developer {

        - id: Long
        - nome: String
        - anoFundacao: Date
    }

    class Plataforma {

        - id: Long
        - nome: String
        - descricao: String
        - anoLancamento: Date
    }

    class Fabricante {

        - id: Long
        - nome: String
        - anoFundacao: Date
    }

    enum Perfil {

        + ADMIN: int
        + USER: int
    }

    class Usuario {

        - id: Long
        - nome: String
        - email: String
        - login: String
        - senha: String
        - cpf: String
    }

    class Telefone {

        - id: Long
        - codigoArea: String
        - numero: String
    }

    class Compra {

        - id: Long
        - dataCompra: LocalDate
        - totalCompra: Double
        - ifConcluida: Boolean
    }

    class ItemCompra {

        - id: Long
        - quantidade: Integer
        - precoUnitario: Double
    }

    class Endereco {

        - id: Long
        - logradouro: String
        - bairro: String
        - numero: String
        - complemento: String
        - cep: String
    }

    class Avaliacao {

        - id: Long
        - comentario: String
        - data: Date
    }

    enum Estrela {

        + ESTRELA1: int
        + ESTRELA2: int
        + ESTRELA3: int
        + ESTRELA4: int
        + ESTRELA5: int
    }

    abstract class Pagamento {

        - id: Long
        - confirmacaoPagamento: Boolean
        - dataConfirmacaoPagamento: Date
        - valor: Double
    }

    class BoletoBancario {

        - nome: String
        - cpf: String
        - dataGeracaoBoleto: Date
        - dataVencimento: Date
    }

    class Pix {

        - nome: String
        - cpf: String
        - dataExpiracaoTokenPix: LocalDate
    }

    class CartaoCredito {

        - numeroCartao: String
        - nomeImpressoCartao: String
        - cpfTitular: String
    }

    enum BandeiraCartao {

        + VISA: int
        + AMERICAN_EXPRESS: int
        + HIPERCARD: int
        + DINERS: int
        + MASTERCARD: int
        + ELO: int
    }

    class Estado {

        - id: Long
        - nome: String
        - sigla: String
    }

    class Cidade {

        - id: Long
        - nome: String
    }

    class Noticia {

        - id: Long
        - titulo: String
        - conteudo: String
        - dataPublicacao: Date
        - autor: String
    }

    enum TopicoPrincipal {

        + EVENTO: int
        + LANCAMENTO: int
        + ANALISE_JOGO: int
        + ATUALIZACAO: int
    }

    Developer "*" --> "1" Classificacao

    Game -up-|> Produto
    Game "*" o--> "1" Developer
    Game "*" o--> "*" Plataforma
    Game "*" o--> "*" Genero

    Noticia "*" --> "1" TopicoPrincipal

    Plataforma "*" o--> "1" Fabricante

    Cidade "*" *--> "1" Estado

    Endereco "*" --> "1" Cidade

    Usuario "*" --> "1" Perfil
    Usuario "*" --> "*" Produto: listaDesejo
    Usuario "1" *--> "*" Telefone
    Usuario "*" *--> "1" Endereco: endereçoPrincipal

    ItemCompra "*" --> "1" Produto

    BoletoBancario -up-|> Pagamento

    Pix -up-|> Pagamento

    CartaoCredito -up-|> Pagamento
    CartaoCredito "*" --> "1" BandeiraCartao

    Compra "*" --> "1" Usuario
    Compra "1" *--> "*" ItemCompra
    Compra "*" --> "1" Endereco
    Compra "1" *--> "1" Pagamento

    Avaliacao "*" --> "1" Estrela
    Avaliacao "*" o--> "1" Usuario
    Avaliacao "*" --> "1" Produto
@enduml